@@ -160,7 +160,7 @@ init_bam_wrapper(bam_wrapper * bw, filetype type, str file_location,
 		}
 		while (TRUE) {
 			ssize_t read;
-			lng header_pos;
+			fpos_t header_pos;
 
 			mnstr_fgetpos(bw->sam.input, &header_pos);
 			read = mnstr_readline(bw->sam.input, bw->sam.header + header_len, bufsize - header_len);
@@ -174,7 +174,7 @@ init_bam_wrapper(bam_wrapper * bw, filetype type, str file_location,
 			if (bw->sam.header[header_len] != '@') {
 				/* This is not a header line, we assume that the header is finished.
 				 * Rewind stream to start of line and stop reading */
-				if (mnstr_fsetpos(bw->sam.input, header_pos) < 0) {
+				if (mnstr_fsetpos(bw->sam.input, &header_pos) < 0) {
 					throw(MAL, "init_bam_wrapper",
 					  ERR_INIT_BAM_WRAPPER "Could not read last line of SAM header",
 					  file_location);
@@ -192,7 +192,7 @@ init_bam_wrapper(bam_wrapper * bw, filetype type, str file_location,
 					throw(MAL, "init_bam_wrapper", SQLSTATE(HY001) MAL_MALLOC_FAIL);
 				}
 				bw->sam.header = tmp;
-				if (mnstr_fsetpos(bw->sam.input, header_pos) < 0) {
+				if (mnstr_fsetpos(bw->sam.input, &header_pos) < 0) {
 					throw(MAL, "init_bam_wrapper",
 					  ERR_INIT_BAM_WRAPPER "Could not read last line of SAM header",
 					  file_location);
